--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,15 @@ dist/
 .vscode/
 .DS_Store
 npm-debug.log
+# environment files
+.env
+backend/.env
+frontend/.env
+
+# Node modules
+node_modules/
+backend/node_modules/
+frontend/node_modules/
+
+# Build output
+dist/
